Test/git-issues/git-issue-859c.dfy.expect
git-issue-859c.dfy(29,8): Error: a ghost variable is allowed only in specification contexts
1 resolution/type errors detected in git-issue-859c.dfy
